--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/Users/juancarloszapatagracia/Documents/proyecto_platzi/css/estilos.css"
 </head>
 <body>
-    <h1>Pagina de prueba version 1</h1>
+    <h1 style="color: burlywood;">Pagina de prueba version 1</h1>
 </body>
 </html>
