primera modificacion desde la rama cabecera

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 style="color: burlywood;">Pagina de prueba version 1</h1>
+    <p>Este es el primer parrafo para validar ajustes desde la rama cabecera</p>
 </body>
 </html>
