--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <title> Mi proyecto de prueba con Github</title>
-    <link rel="stylesheet" href="/Users/juancarloszapatagracia/Documents/proyecto_platzi/css/estilos.css"
+    <link rel="stylesheet" href="/Users/juancarloszapatagracia/Documents/proyecto_platzi/css/estilos.css">
 </head>
 <body>
     <h1 style="color: burlywood;">Pagina de prueba version 1</h1>
