arreglo de conexion de estilos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
     <title> Mi proyecto de prueba con Github</title>
-    <link rel="stylesheet" href="/Users/juancarloszapatagracia/Documents/proyecto_platzi/css/estilos.css">
+    <link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1 style="color: burlywood;">Pagina de prueba version 1</h1>
+    <h1>Pagina de prueba version 1</h1>
     <p>Este es el primer parrafo para validar ajustes desde la rama cabecera</p>
 </body>
 </html>
