fondo blanco titulo azul

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Pagina de prueba version 1</h1>
-    <p>Este es el primer parrafo para validar ajustes desde la rama cabecera</p>
+    <div class="contenedor blog">
+        <h1>Argentina Campeón</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis explicabo, nesciunt maxime sit est quibusdam dignissimos in porro exercitationem omnis accusantium officiis facere corporis nihil nam odit. Commodi, id?</p>
+    </div>
 </body>
 </html>
