--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <div class="blogdeproyecto">
     <div class="contenedor blog">
-        <h1>Argentina Campeón</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis explicabo, nesciunt maxime sit est quibusdam dignissimos in porro exercitationem omnis accusantium officiis facere corporis nihil nam odit. Commodi, id?</p>
+        <h3>Argentina Campeón</h3>
     </div>
+    <div class="content_blog">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis explicabo, nesciunt maxime sit est quibusdam dignissimos in porro exercitationem omnis accusantium officiis facere corporis nihil nam odit. Commodi, id?</p>
+    </div></div>
 </body>
 </html>
