--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h3>Argentina Campeón</h3>
     </div>
     <div class="content_blog">
+        <img src="https://static.dw.com/image/58228265_303.jpg">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis explicabo, nesciunt maxime sit est quibusdam dignissimos in porro exercitationem omnis accusantium officiis facere corporis nihil nam odit. Commodi, id?</p>
     </div></div>
 </body>
