--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="content_blog">
         <img class="imagenblog" src="https://static.dw.com/image/58228265_303.jpg">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis explicabo, nesciunt maxime sit est quibusdam dignissimos in porro exercitationem omnis accusantium officiis facere corporis nihil nam odit. Commodi, id?</p>
+        <div> <p>redes sociales</p></div>
     </div></div>
 </body>
 </html>
