--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="blogdeproyecto">
     <div class="contenedor blog">
-        <h3>Argentina Campeón</h3>
+        <h3>Argentina Campeón De America</h3>
     </div>
     <div class="content_blog">
         <img class="imagenblog" src="https://static.dw.com/image/58228265_303.jpg">
